force-app/main/default/objects/Cal_API_Base_URL__mdt/Cal_API_Base_URL__mdt.object-meta.xml
<CustomObject>
    <label>Cal API Base URL</label>
    <pluralLabel>Cal API Base URLs</pluralLabel>
</CustomObject>