force-app/main/default/objects/Cal_API_Base_URL__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>za</fullName>
                <default>true</default>
                <label>za</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>